added form-taglibs, form-taglib, secure cookie. Changes in AddressValidator

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,6 +16,9 @@
             <li>
                 <h:link outcome="/form" value="#{text['pages.index.linkToForm']}" />
             </li>
+            <li>
+                <h:link outcome="/form-taglibs" value="#{text['pages.index.linkToFormWithTaglibs']}" />
+            </li>
         </ul>
 
     </ui:define>
