--- a/src/main/webapp/form-taglibs.xhtml
+++ b/src/main/webapp/form-taglibs.xhtml
@@ -3,13 +3,14 @@
     xmlns:h="jakarta.faces.html"
     xmlns:f="jakarta.faces.core"
     xmlns:pt="jakarta.faces.passthrough"
+    xmlns:play="playground.tags"
     template="/WEB-INF/templates/layout.xhtml"
     >
 
-    <ui:param name="title" value="#{text['pages.form.header']}" />
+    <ui:param name="title" value="#{text['pages.form-taglibs.header']}" />
 
     <ui:define name="content">
-        <h1>#{text['pages.form.header']}</h1>
+        <h1>#{text['pages.form-taglibs.header']}</h1>
         <br /><br />
 
         <h:form id="formly">
@@ -17,27 +18,19 @@
             <ui:fragment rendered="#{not formView.bean.submitted}">
 
                 <div class="mb-3">
-                    <h:outputLabel class="form-label" for="firstname" value="#{text['label.firstname']}"/>
-                    <h:inputText  id="firstname" class="form-control" value="#{formView.bean.firstname}" required="true" requiredMessage="#{messages['FIRSTNAME_MISSING']}">
-                        <f:validateLength minimum="2" maximum="100" />
-                    </h:inputText>
-                    <h:messages id="m_firstname" class="messages-input" for="firstname" showDetail="false" errorClass="messages-error" fatalClass="messages-fatal" infoClass="messages-info" />
+                    <play:field id="firstname" class="form-label" value="#{formView.bean.firstname}" label="#{text['label.firstname']}" requiredMessage="#{messages['FIRSTNAME_MISSING']}" />
                 </div>
 
                 <div class="mb-3">
-                    <h:outputLabel class="form-label" for="serialNumber" value="#{text['label.serialNumber']}" />
-                    <h:inputText  id="serialNumber" class="form-control" value="#{formView.bean.serialNumber}" required="true" requiredMessage="#{messages['SERIALNUMBER_MISSING']}">
+                    <play:field id="serialNumber" type="text" class="form-label" value="#{formView.bean.serialNumber}" label="#{text['label.serialNumber']}" requiredMessage="#{messages['SERIALNUMBER_MISSING']}">
                         <f:validateRegex pattern="[0-9-]{2,10}" />
-                    </h:inputText>
-                    <h:messages id="m_serialNumber" class="messages-input" for="serialNumber" showDetail="false" errorClass="messages-error" fatalClass="messages-fatal" infoClass="messages-info" />
+                    </play:field>
                 </div>
 
                 <div class="mb-3">
-                    <h:outputLabel class="form-label" for="email" value="#{text['label.email']}" />
-                    <h:inputText type="email" id="email" class="form-control" value="#{formView.bean.email}" required="true" requiredMessage="#{messages['EMAIL_MISSING']}">
+                    <play:field id="email" type="email" class="form-label" value="#{formView.bean.email}" label="#{text['label.email']}" requiredMessage="#{messages['EMAIL_MISSING']}">
                         <f:validator validatorId="play.EmailValidator" />
-                    </h:inputText>
-                    <h:messages id="m_email" class="messages-input" for="email" showDetail="false" errorClass="messages-error" fatalClass="messages-fatal" infoClass="messages-info" />
+                    </play:field>
                 </div>
 
                 <div class="row">
@@ -70,37 +63,29 @@
 
                 <h:panelGroup id="address" class="row mb-3" layout="block">
                     <div class="col-2">
-                        <h:outputLabel class="form-label" for="zip" value="#{text['label.zip']}"/>
-                        <h:inputText id="zip" class="form-control" value="#{formView.bean.zip}" required="true" requiredMessage="#{messages['ZIP_MISSING']}" autocomplete="postal-code">
+                        <play:field id="zip" class="form-control" value="#{formView.bean.zip}" label="#{text['label.zip']}" requiredMessage="#{messages['ZIP_MISSING']}" >
                             <f:attribute name="componentIds" value="zip,city,street" />
                             <f:attribute name="suggestionContainer" value="#{formView.bean.suggestions}" />
-                            <f:validateLength minimum="4" maximum="10" />
                             <f:validator validatorId="play.AddressValidator"/>
                             <f:ajax event="keyup" delay="500" execute="formly:address" render="formly:address-suggestions" />
-                        </h:inputText>
-                        <h:messages id="m_zip" class="messages-input" for="zip" showDetail="false" errorClass="messages-error" fatalClass="messages-fatal" infoClass="messages-info" />
+                        </play:field>
+
                     </div>
                     <div class="col-4">
-                        <h:outputLabel class="form-label" for="city" value="#{text['label.city']}"/>
-                        <h:inputText id="city" class="form-control" value="#{formView.bean.city}" required="true" requiredMessage="#{messages['CITY_MISSING']}" autocomplete="address-level2">
+                        <play:field id="city" class="form-control" value="#{formView.bean.city}" label="#{text['label.city']}" requiredMessage="#{messages['CITY_MISSING']}" >
                             <f:attribute name="componentIds" value="zip,city,street" />
                             <f:attribute name="suggestionContainer" value="#{formView.bean.suggestions}" />
-                            <f:validateLength minimum="2" maximum="255" />
                             <f:validator validatorId="play.AddressValidator" />
                             <f:ajax event="keyup" delay="500" execute="formly:address" render="formly:address-suggestions" />
-                        </h:inputText>
-                        <h:messages id="m_city" class="messages-input" for="city" showDetail="false" errorClass="messages-error" fatalClass="messages-fatal" infoClass="messages-info" />
+                        </play:field>
                     </div>
                     <div class="col-6">
-                        <h:outputLabel class="form-label" for="street" value="#{text['label.street']}"/>
-                        <h:inputText id="street" class="form-control" value="#{formView.bean.street}" required="true" requiredMessage="#{messages['STREET_MISSING']}" autocomplete="address-line1">
+                        <play:field id="street" class="form-control" value="#{formView.bean.street}" label="#{text['label.street']}" requiredMessage="#{messages['STREET_MISSING']}" >
                             <f:attribute name="componentIds" value="zip,city,street" />
                             <f:attribute name="suggestionContainer" value="#{formView.bean.suggestions}" />
-                            <f:validateLength minimum="2" maximum="255" />
                             <f:validator validatorId="play.AddressValidator" />
                             <f:ajax event="keyup" delay="500" execute="formly:address" render="formly:address-suggestions" />
-                        </h:inputText>
-                        <h:messages id="m_street" class="messages-input" for="street" showDetail="false" errorClass="messages-error" fatalClass="messages-fatal" infoClass="messages-info" />
+                        </play:field>
                     </div>
                 </h:panelGroup>
 
