--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -3,6 +3,7 @@
     xmlns:ui="jakarta.faces.facelets"
     xmlns:h="jakarta.faces.html"
     xmlns:f="jakarta.faces.core"
+    xmlns:playcc="jakarta.faces.composite/playcc"
     >
 
     <ui:param name="title" value="Willkommen!" />
@@ -20,6 +21,18 @@
                 <h:link outcome="/form-taglibs" value="#{text['pages.index.linkToFormWithTaglibs']}" />
             </li>
         </ul>
+
+        <br />
+        <br />
+
+        <playcc:exampleImage id="my-example-image" src="/resources/images/layout/favicon.svg" alt="alternate text" width="32">
+            <f:facet name="before">
+                before image
+            </f:facet>
+            <f:facet name="after">
+                <span>after image</span>
+            </f:facet>
+        </playcc:exampleImage>
 
     </ui:define>
 </ui:composition>
