Add third formular with bean validation. minor fixes.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -20,6 +20,9 @@
             <li>
                 <h:link outcome="/form-taglibs" value="#{text['pages.index.linkToFormWithTaglibs']}" />
             </li>
+            <li>
+                <h:link outcome="/form-bean-validation" value="#{text['pages.index.linkToFormWithBeanValidation']}" />
+            </li>
         </ul>
 
         <br />
