pom update, text changes

--- a/src/main/webapp/WEB-INF/decorations/contact.xhtml
+++ b/src/main/webapp/WEB-INF/decorations/contact.xhtml
@@ -1,6 +1,8 @@
 <!-- Template Decoration
-    Wiederverwendbare Include File. Kann überall benutzt werden wo <ui:insert> benutzt wird,
-    Überall genauso wie <ui:inset zu benutzen, jedoch mit <ui:decorate:
+    Wiederverwendbare Datei, die Template Teile ein oder mehrere
+   Templatebestandteile über <ui:insert> einbindet.
+   Da wo es benutzt muss man <ui:decorate verwenden. Siehe footer.xhtml
+     Inhalt von ui:decorate wird in im ui:insert der contact angezeigt
 
     <ui:decorate template="/WEB-INF/decorations/contact.xhtml">
         <ui:param name="mailto" value="press" />
