--- a/src/main/webapp/resources/playcc/exampleImage.xhtml
+++ b/src/main/webapp/resources/playcc/exampleImage.xhtml
@@ -9,12 +9,13 @@
         <cc:attribute name="src" type="java.lang.String" shortDescription="Src of the Image" />
         <cc:attribute name="alt" type="java.lang.String" shortDescription="Alt of the Image" />
         <cc:attribute name="width" type="java.lang.Integer" />
+        <cc:attribute name="height" type="java.lang.Integer" />
     </cc:interface>
 
     <cc:implementation>
         <span id="#{cc.clientId}">
             <cc:renderFacet name="before" />
-            <h:graphicImage value="#{cc.attrs.src}" alt="#{cc.attrs.alt}" width="#{cc.attrs.width}"/>
+            <h:graphicImage value="#{cc.attrs.src}" alt="#{cc.attrs.alt}" width="#{cc.attrs.width}" height="#{cc.attrs.height}"/>
             <cc:renderFacet name="after" />
         </span>
     </cc:implementation>
