add example register and user-management

--- a/src/main/webapp/WEB-INF/decorations/contact.xhtml
+++ b/src/main/webapp/WEB-INF/decorations/contact.xhtml
@@ -1,8 +1,9 @@
 <!-- Template Decoration
-    Wiederverwendbare Datei, die Template Teile ein oder mehrere
+   Wiederverwendbare Datei eine oder mehrere
    Templatebestandteile über <ui:insert> einbindet.
-   Da wo es benutzt muss man <ui:decorate verwenden. Siehe footer.xhtml
-     Inhalt von ui:decorate wird in im ui:insert der contact angezeigt
+   Um einzubinden muss man <ui:decorate verwenden verwebden.
+   Siehe footer.xhtml als Beispiel.
+   Der Inhalt von ui:decorate wird hier in im ui:insert angezeigt.
 
     <ui:decorate template="/WEB-INF/decorations/contact.xhtml">
         <ui:param name="mailto" value="press" />
