--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -27,15 +27,11 @@
         <br />
 
         <ul>
-            <li>
-                <h:link outcome="/form" value="#{text['pages.index.linkToForm']}" />
-            </li>
-            <li>
-                <h:link outcome="/form-taglibs" value="#{text['pages.index.linkToFormWithTaglibs']}" />
-            </li>
-            <li>
-                <h:link outcome="/form-bean-validation" value="#{text['pages.index.linkToFormWithBeanValidation']}" />
-            </li>
+            <li><h:link outcome="/register" value="#{text['pages.index.linkToRegister']}" /></li>
+            <li><h:link outcome="/user-management" value="#{text['pages.index.linkToUserManagement']}" /></li>
+            <li><h:link outcome="/form" value="#{text['pages.index.linkToForm']}" /></li>
+            <li><h:link outcome="/form-taglibs" value="#{text['pages.index.linkToFormWithTaglibs']}" /></li>
+            <li><h:link outcome="/form-bean-validation" value="#{text['pages.index.linkToFormWithBeanValidation']}" /></li>
         </ul>
 
         <br />
