dependencies update, minor changes

--- a/src/main/webapp/images.xhtml
+++ b/src/main/webapp/images.xhtml
@@ -19,6 +19,8 @@
         <img src="/jakarta.faces.resource/images/layout/playground.svg.xhtml" loading="lazy" />
         <br />
         <h:graphicImage value="/resources/images/layout/playground.svg" library="images" pt:loading="lazy" />
-
+        <br />
+        <ui:include src="/resources/images/layout/playground.svg" />
+        <br />
     </ui:define>
 </ui:composition>
