--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -33,6 +33,7 @@
             <li><h:link outcome="/form" value="#{text['pages.index.linkToForm']}" /></li>
             <li><h:link outcome="/form-taglibs" value="#{text['pages.index.linkToFormWithTaglibs']}" /></li>
             <li><h:link outcome="/form-bean-validation" value="#{text['pages.index.linkToFormWithBeanValidation']}" /></li>
+            <li><h:link outcome="/rest-client" value="#{text['pages.index.linkToRestClient']}" /></li>
         </ul>
 
         <br />
