add TempDirDataCache with example Products page

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -34,6 +34,7 @@
             <li><h:link outcome="/form-taglibs" value="#{text['pages.index.linkToFormWithTaglibs']}" /></li>
             <li><h:link outcome="/form-bean-validation" value="#{text['pages.index.linkToFormWithBeanValidation']}" /></li>
             <li><h:link outcome="/rest-client" value="#{text['pages.index.linkToRestClient']}" /></li>
+            <li><h:link outcome="/products" value="#{text['pages.index.linkToProducts']}" /></li>
         </ul>
 
         <br />
